# reana-cwl-client

./: Cargo.toml  README.md
.github/workflows/: ci.yaml  publish.yaml
crates/reana/: Cargo.toml  client.rs  error.rs  io.rs  lib.rs  logs.rs  storage.rs
crates/reana-auth/: Cargo.toml  lib.rs
crates/reana-client/: Cargo.toml  cli.rs  lib.rs  main.rs
crates/reana-client/commands/: mod.rs  workflows.rs
crates/reana/api/: client.rs  mod.rs  response.rs  workflows.rs
crates/reana/models/: workflows.rs
crates/reana/src/: client.rs  error.rs  lib.rs
crates/reana/src/api/: response.rs  workflows.rs
testdata/: example_logs.json  inputs.yml
testdata/data/: population.csv  speakers_revised.csv
testdata/workflows/calculation/: calculation.cwl  calculation.py
testdata/workflows/main/: main.cwl
testdata/workflows/plot/: plot.cwl  plot.py
