[workspace]
members = ["crates/reana", "crates/reana-auth"]
resolver = "3"

[workspace.package]
version = "0.0.1"
edition = "2024"
repository = "https://github.com/fairagro/sciwin"
license = "MIT OR Apache-2.0"
authors = [
    "Jens Krumsieck",
    "Antonia Leidel",
    "Harald von Waldow",
    "Patrick König",
    "Xaver Stiensmeier",
]

[workspace.dependencies]
async-trait = "0.1.89"
reqwest = { "version" = "0.13.4", features = ["json", "query"] }
url = "2.5.8"
chrono = { version = "0.4.45", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.34.0", features = ["full"] }
commonwl = "0.8.1"
serde_json = "1.0.150"
thiserror = "2.0.18"
pathdiff = "0.2.3"
miette = "7.6.0"
