[workspace]
members = ["crates/reana", "crates/reana-auth", "crates/reana-client"]
resolver = "3"

[workspace.package]
version = "0.0.1"
edition = "2024"
repository = "https://github.com/fairagro/sciwin"
license = "MIT OR Apache-2.0"
authors = [
    "Jens Krumsieck",
    "Antonia Leidel",
    "Harald von Waldow",
    "Patrick König",
    "Xaver Stiensmeier",
]

[workspace.dependencies]
async-trait = "0.1.91"
reqwest = { "version" = "0.13.4", features = ["json", "query", "rustls"] }
url = "2.5.8"
chrono = { version = "0.4.45", features = ["serde"] }
serde = { version = "1.0.229", features = ["derive"] }
tokio = { version = "1.53.1", features = ["full"] }
commonwl = { version = "0.8.3", features = ["engine"] }
serde_json = "1.0.151"
thiserror = "2.0.19"
pathdiff = "0.2.3"
miette = "7.6.0"
tracing = "0.1.44"
dunce = "1.0.5"
