[package]
name = "reana-auth"
description = "Authprovider for REANA Servers"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
async-trait.workspace = true
reqwest.workspace = true
miette.workspace = true
secrecy.workspace = true

[lib]
path = "lib.rs"
