[package]
name = "reana-cwl"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
publish = false

[[bin]]
name = "reana-cwl"
path = "main.rs"

[lib]
path = "lib.rs"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
dotenvy = "0.15.7"
reana = { version = "0.2.0", path = "../reana" }
miette = { workspace = true, features = ["fancy"] }
serde_json.workspace = true
url.workspace = true
tokio.workspace = true
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
tracing.workspace = true
serde.workspace = true
owo-colors.workspace = true
