[package]
name = "reana"
description = "Library for the interaction of CWL and REANA Servers"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"

[dependencies]
reana-auth = { version = "0.2.0", path = "../reana-auth" }
url.workspace = true
reqwest.workspace = true
chrono.workspace = true
serde.workspace = true
tokio.workspace = true
commonwl.workspace = true
serde_json.workspace = true
thiserror.workspace = true
miette.workspace = true
pathdiff.workspace = true
anyhow.workspace = true
tracing.workspace = true
dunce.workspace = true
secrecy.workspace = true

[dev-dependencies]
mockito = "1.7.2"
tempfile = "3.9.0"
async-trait.workspace = true

[lib]
path = "lib.rs"
